[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ccl_chrome_indexeddb"
authors = [
    {name = "CCL Forensics"},
]
description = "Python re-implementations of the technologies involved in reading various data sources in Chrome-esque applications"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]

dynamic = ["version"]

[tool.setuptools]
py-modules = ["ccl_blink_value_deserializer", "ccl_chromium_indexeddb", "ccl_leveldb", "ccl_simplesnappy", "ccl_v8_value_deserializer"]
